# planificador-procesos

./: .gitignore  README.md  README_PYTHON.md  pyproject.toml  simulador.spec  test_fcfs.py  test_mapeo_datos.py  test_rr.py
data/input/: procesos_ejemplo.txt
docs/: README.md  conceptos_sistemas_operativos.md  integrador.md
scripts/: README.md  build.sh  build_windows.bat
src/: main.py
src/simulador/: README.md  estado_proceso.py  exportador_pdf.py  pcb.py  proceso.py  simulador.py
src/simulador/algoritmos/: FCFS.py  PE.py  PrioridadExterna.py  RR.py  RoundRobin.py  SPN.py  SRTN.py  __init__.py
src/ui/: README.md  README_INTERFAZ.md  main_window.py  theme.py
src/ui/components/: file_loader.py  gantt_tab.py  parameter_input.py  policy_selector.py  results_tab.py  simulation_controls.py  stats_tab.py
