[project]
name = "planificador-procesos"
version = "0.1.0"
description = ""
authors = [
    {name = "Lk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "tk (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false