[tool.poetry]
name = "planificador-procesos"
version = "0.1.0"
description = "Simulador de estrategias de planificación del procesador"
authors = ["Lk"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
customtkinter = "^5.2.2"
matplotlib = "^3.10.5"
tk = "^0.1.0"
ctktable = "^1.1"
screeninfo = "^0.8.1"
reportlab = "^4.4.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"